--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,8 @@ services:
       - 8042:8042
 
   hive-server:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    # image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-server
     env_file:
       - ./hadoop-hive.env
@@ -66,7 +67,8 @@ services:
       - "10000:10000"
 
   hive-metastore:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    # image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
     env_file:
       - ./hadoop-hive.env
@@ -75,7 +77,8 @@ services:
       - 9083:9083
 
   hive-metastore-postgresql:
-    image: bde2020/hive-metastore-postgresql:2.1.0
+    # image: bde2020/hive-metastore-postgresql:2.1.0
+    image: bde2020/hive-metastore-postgresql:2.3.0
     ports:
       - 5432:5432
     volumes:
